# poa-to-parachain

./: Cargo.toml
.github/: FUNDING.yml
node/: Cargo.toml
node/src/: chain_spec.rs  service.rs
runtime/: Cargo.toml
runtime/src/: account.rs  lib.rs  precompiles.rs
